Readme added and applications properties modified.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=literalura
 spring.datasource.url=jdbc:postgresql://localhost/literalura
-spring.datasource.username=postgres
-spring.datasource.password=Cronwell0816#
+spring.datasource.username=${DB_USERNAME:postgres}
+spring.datasource.password=${DB_PASS:Cronwell0816#}
 spring.datasource.driver-class-name=org.postgresql.Driver
 hibernate.dialect=org.hibernate.dialect.HSQLDialect
 
